# LFLL

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LFLLTarget.cmake  LICENSE  README.md
benchmark/: CMakeLists.txt  LFLLBenchmark.h  MamdaniAllTerms.cpp  MamdaniAllTerms.h  MamdaniBenchmark.cpp  SugenoAllTerms.cpp  SugenoAllTerms.h  SugenoBenchmark.cpp  main.cpp
benchmarks/: CMakeLists.txt
benchmarks/allterms/: CMakeLists.txt  LFLLBenchmark.h  MamdaniBenchmark.cpp  SugenoAllTerms.cpp  SugenoAllTerms.h  SugenoBenchmark.cpp
benchmarks/fuzzylite/: CMakeLists.txt  FuzzyliteMamdaniBenchmark.cpp  FuzzyliteSugenoBenchmark.cpp  LFLLMamdaniBenchmark.cpp  LFLLSimpleMamdani.cpp  LFLLSimpleMamdani.h  LFLLSimpleSugeno.cpp  LFLLSimpleSugeno.h  LFLLSugenoBenchmark.cpp  SimpleMamdani.fis  SimpleSugeno.fis  main.cpp
cmake_modules/: FindLFLL.cmake
example/: CMakeLists.txt  ExampleLFLLEngine.cpp  ExampleLFLLEngine.h  main.cpp
examples/: CMakeLists.txt
examples/fixedpt/: CMakeLists.txt  FixedPt32.h  FixedPtAllTerms.cpp  FixedPtAllTerms.h  fixedptc.h  main.cpp
examples/mamdani/: CMakeLists.txt  MamdaniAllTerms.cpp  MamdaniAllTerms.fis  MamdaniAllTerms.h  main.cpp
examples/namespace/: CMakeLists.txt  NamespaceAllTerms.cpp  NamespaceAllTerms.h  main.cpp
examples/openmp/: CMakeLists.txt  OpenMpAllTerms.cpp  OpenMpAllTerms.h  main.cpp
examples/sugeno/: CMakeLists.txt  SugenoAllTerms.cpp  SugenoAllTerms.fis  SugenoAllTerms.h  main.cpp
lfll/: CMakeLists.txt  LFLL.h  LFLLAggregator.h  LFLLBinaryOperator.h  LFLLBoolean.h  LFLLBoundedTerm.h  LFLLComplementOperator.h  LFLLConfig.h  LFLLConsequence.h  LFLLDefinitions.h  LFLLInputFuzzifier.h  LFLLLRamp.h  LFLLMath.h  LFLLMaxOperator.h  LFLLMembership.h  LFLLMinOperator.h  LFLLPiShape.h  LFLLRRamp.h  LFLLRectangle.h  LFLLRule.h  LFLLRulesEngine.h  LFLLRulesEngineDetail.h  LFLLSShape.h  LFLLSingleton.h  LFLLStaticAssert.h  LFLLSugenoDefuzzifier.h  LFLLSugenoTerms.h  LFLLTermBase.h  LFLLTrapezoid.h  LFLLTriangle.h  LFLLTuple.h  LFLLUnaryOperator.h  LFLLZShape.h
lfll/detail/: LFLLInputFuzzifierDetail.h  LFLLRulesEngineDetail.h  LFLLSugenoDefuzzifierDetail.h  LFLLTupleDetail.h
lfll/engine/: LFLLAggregator.h  LFLLArray.h  LFLLConsequence.h  LFLLDefinitions.h  LFLLInputFuzzifier.h  LFLLMath.h  LFLLMembership.h  LFLLRule.h  LFLLRulesEngine.h  LFLLStaticAssert.h  LFLLTuple.h
lfll/engine/detail/: LFLLInputFuzzifierDetail.h  LFLLRulesEngineDetail.h  LFLLTupleDetail.h
lfll/mamdani/: LFLLMamdaniDefuzzifier.h
lfll/mamdani/detail/: LFLLMamdaniBisectorDefuzzifier.h  LFLLMamdaniCentroidDefuzzifier.h  LFLLMamdaniDefuzzifierDetail.h  LFLLMamdaniLargestOfMaximumDefuzzifier.h  LFLLMamdaniMeanOfMaximumDefuzzifier.h  LFLLMamdaniSmallestOfMaximumDefuzzifier.h
lfll/norms/: LFLLCNorm.h  LFLLSNorm.h  LFLLTNorm.h
lfll/sugeno/: LFLLSugenoDefuzzifier.h  LFLLSugenoTerms.h
lfll/sugeno/detail/: LFLLSugenoDefuzzifierDetail.h
lfll/terms/: LFLLAccumulated.h  LFLLBell.h  LFLLBoolean.h  LFLLBoundedTerm.h  LFLLFunction.h  LFLLFunctor.h  LFLLGaussian.h  LFLLGaussianProduct.h  LFLLLRamp.h  LFLLPiShape.h  LFLLRRamp.h  LFLLRectangle.h  LFLLSShape.h  LFLLSigmoid.h  LFLLSigmoidDifference.h  LFLLSigmoidProduct.h  LFLLSingleton.h  LFLLTrapezoid.h  LFLLTriangle.h  LFLLZShape.h
lfll/terms/detail/: LFLLAccumulatedDetail.h
python/: LFLLFisExporter.py  LFLLFisImporter.py  LFLLTupleGenerator.py
tests/: CMakeLists.txt  LFLLAggreggatorTest.cpp  LFLLBooleanTest.cpp  LFLLCompleteTest.cpp  LFLLInputFuzzifierTest.cpp  LFLLLRampTest.cpp  LFLLMathTest.cpp  LFLLRRampTest.cpp  LFLLRulesEngineSpecTest.cpp  LFLLRulesEngineTest.cpp  LFLLSShapeTest.cpp  LFLLSugenoDefuzzifierTest.cpp  LFLLTests.h  LFLLZShapeTest.cpp  main.cpp
tests/engine/: LFLLAggreggatorTest.cpp  LFLLInputFuzzifierTest.cpp  LFLLMathTest.cpp  LFLLRulesEngineTest.cpp
tests/gtest/: gtest-all.cc
tests/mamdani/: LFLLMamdaniDefuzzifierTest.cpp
tests/norms/: LFLLCNormTest.cpp  LFLLSNormTest.cpp  LFLLTNormTest.cpp
tests/sugeno/: LFLLSugenoDefuzzifierTest.cpp
tests/terms/: LFLLAccumulatedTest.cpp  LFLLBellTest.cpp  LFLLBooleanTest.cpp  LFLLFunctionTest.cpp  LFLLFunctorTest.cpp  LFLLGaussianProductTest.cpp  LFLLGaussianTest.cpp  LFLLLRampTest.cpp  LFLLPiShapeTest.cpp  LFLLRRampTest.cpp  LFLLRectangleTest.cpp  LFLLSShapeTest.cpp  LFLLSigmoidDifferenceTest.cpp  LFLLSigmoidProductTest.cpp  LFLLSigmoidTest.cpp  LFLLSingletonTest.cpp  LFLLTrapezoidTest.cpp  LFLLTriangleTest.cpp  LFLLZShapeTest.cpp
